--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+    <style>
+      #content {
+          width: 1000px;
+          margin: 0 auto;
+          text-align: center;
+        }
+
+        .head-img {
+          width: 1000px;
+          height: 500px;
+        }
+
+        ul {
+          list-style-type: none;
+        }
+
+        .img-styling {
+          width: 250px;
+          height: 250px;
+        }
+    </style>
   </head>
   <body>
     <div id="content"></div>
